fixed footer alignment

--- a/assets/sass/section/_footer.scss
+++ b/assets/sass/section/_footer.scss
@@ -658,8 +658,11 @@ Copyright Two
 @media (max-width: 575px) {
     .footer__top {
         &-item {
-            justify-content: center;
+            // justify-content: center;
             display: flex;
+            justify-content: left;
+            margin-left: 15%;
+
         }
     }
 }
